1999-01-16  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* Makefile (SWARMHOME): Update to 1999-01-16.

	* ObserverSwarm.m ([ObserverSwarm -buildActions]): Add
	probeDisplay update to displayActions.

1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Default to 1998-08-17.
	Include Makefile.appl from $(SWARMHOME)/etc/swarm.

1998-04-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ObserverSwarm.h (ObserverSwarm): Make foodDisplay an object that
	conforms to the Value2dDisplay protocol.  Make bugDisplay an
	object that conforms to the Object2dDisplay protocol.

	* FoodSpace.h: Include space/Discrete2d.h instead of space.h.

	* ModelSwarm.h (ModelSwarm), Bug.h (Bug): Make world an object
	that conforms to the Grid2d protocol.

1998-03-18  Alex Lancaster  <alex@santafe.edu>

	* ObserverSwarm.m: Import <activity.h> since it is referenced in
	this implementation.

	* ModelSwarm.m: Import <activity.h> and <collections.h>.  Taken
	from interface header file.

	* ModelSwarm.h: Removed irrelevant <collections.h>, <activity.h>
	and <objectbase.h> imports. Not used in interface.

	* FoodSpace.m: Removed import of <simtools.h>. Added import of
	<random.h>. Reformatting throughout.

	* FoodSpace.h: Removed irrelevant import of <simtools.h>. Minor
	re-formatting.

1998-02-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ObserverSwarm.m: Don't include collections.h, objectbase.h,
	analysis.h, or gui.h.  Include simtoolsgui.h.

	* ObserverSwarm.h: Don't include objectbase.h, space.h,
	activity.h, gui.h, collections.h, simtools.h, or analysis.h.
	Include simtoolsgui/GUISwarm.h.

	* ModelSwarm.m: Include random.h instead of simtools.h.
	Reformatting throughout.

	* Bug.m: Don't include simtools.h or gui.h.  Include random.h.

1998-02-26  Alex Lancaster  <alex@santafe.edu>

	* ObserverSwarm.m ([ObserverSwarm -build{Objects,Actions}]): Made
	all references to object creation in create: and createBegin: