@@ -1,6 +1,0 @@
-@begin
-worldXSize 80
-worldYSize 80
-seedProb 1.0
-bugDensity 0.02
-@end
